--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
     <title>congrats, my love</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Google Font -->
+    </head>
     <style>
         body {
             display: flex;
