--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 <script>
     function checkPassword() {
-        const correctPassword = "yunie"; // Change this to your desired password
+        const correctPassword = "020524"; // Change this to your desired password
         const enteredPassword = document.getElementById('password').value;
 
         if (enteredPassword === correctPassword) {
             window.location.href = "success.html"; // Redirect to the next page
         } else {
-            alert("only my noëlie will get this, go away. hint for my wife; one of my fave nicknames!");
+            alert("only my noëlie will get this, go away. if you need hints ask ren directly.");
         }
     }
 </script>
