--- a/success.html
+++ b/success.html
@@ -12,9 +12,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 125vh;
             background-color: #ecd8f2;
             font-family: Arial, sans-serif; /* Default font */
+            transform: scale(0.75); /* Default scaling */
+            transform-origin: top center; /* Ensure scaling happens from the top */
         }
         .container {
             display: flex;
